--- a/layouts/search_result/single.html
+++ b/layouts/search_result/single.html
@@ -43,6 +43,7 @@
       var G = GALFSRAM = window.GALFSRAM || {}
       G.mfx = G.mfx || {}
       G.mfx.router_mode = 'history'
+      GALFSRAM.mfx.ajaxUrlRegExp = /^\/\/mf2ap001\.marsflag\.com\/cybozu__support__help\/x_search\.x$/;
     }();
     </script>
     <script src="//c.marsflag.com/mf/mfx/1.0/js/mfx-serp.js" charset="UTF-8"></script>
