--- a/kintone-help-astro-poc/src/layouts/components/Footer.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Footer.astro
@@ -144,7 +144,7 @@ const { primaryLinks, helpSiteLinks } = processFooterData(footerData);
           <!-- CookiePro Cookies Settings button start -->
           <button id="ot-sdk-btn" class="ot-sdk-show-settings">Cookie Settings</button>
           <!-- CookiePro Cookies Settings button end -->
-          <script type="text/javascript" src="javascripts/geolocation.js"></script>
+          <script type="text/javascript" src="/javascripts/geolocation.js"></script>
         </>
       )}
     </div>
