--- a/kintone-help-astro-poc/src/layouts/components/BreadcrumbNav.astro
+++ b/kintone-help-astro-poc/src/layouts/components/BreadcrumbNav.astro
@@ -1,6 +1,6 @@
 ---
 import Title from './Title.astro';
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import type { PageProps, EnvProps } from './types';
 
 interface Props {
