--- a/kintone-help-astro-poc/src/layouts/components/Header.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import SearchBox from './SearchBox.astro';
 import LangSelector from './LangSelector.astro';
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 
 interface Props {
   env: {
