--- a/kintone-help-astro-poc/src/layouts/components/MegaNavGr.astro
+++ b/kintone-help-astro-poc/src/layouts/components/MegaNavGr.astro
@@ -4,7 +4,7 @@ import MegaNavGrGetSecond from './MegaNavGrGetSecond.astro';
 import MegaNavGrSectBar from './MegaNavGrSectBar.astro';
 import MegaNavGrMegaPanel from './MegaNavGrMegaPanel.astro';
 import MegaNavGrTitleIcon from './MegaNavGrTitleIcon.astro';
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import type { BaseProps } from './types';
 
 interface Props extends BaseProps {}
