--- a/kintone-help-astro-poc/src/layouts/components/AnnouncementBanner.astro
+++ b/kintone-help-astro-poc/src/layouts/components/AnnouncementBanner.astro
@@ -1,5 +1,5 @@
 ---
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import MakeAnnounceBanner from './MakeAnnounceBanner.astro';
 
 interface Props {
