--- a/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
+++ b/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
@@ -1,5 +1,5 @@
 ---
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import Footer2Disclaimer from './Footer2Disclaimer.astro';
 
 interface Props {
