--- a/kintone-help-astro-poc/src/layouts/components/PageNav2.astro
+++ b/kintone-help-astro-poc/src/layouts/components/PageNav2.astro
@@ -1,5 +1,5 @@
 ---
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import type { BaseProps } from './types';
 
 interface Props extends BaseProps {}
