--- a/kintone-help-astro-poc/src/layouts/components/Related.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Related.astro
@@ -1,5 +1,5 @@
 ---
-import Wovn from './Wovn.astro';
+import Wovn from '@/components/Wovn.astro';
 import Title from './Title.astro';
 
 interface Props {
