--- a/kintone-help-astro-poc/src/layouts/components/Head.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Head.astro
@@ -1,7 +1,5 @@
 ---
 import AlternateLink from './AlternateLink.astro';
-import ApplyParams from './ApplyParams.astro';
-import Title from './Title.astro';
 import Gtm from './Gtm.astro';
 
 interface Props {
@@ -20,7 +18,6 @@ interface Props {
     staging?: string;
     favicon?: string;
     targetRegion: string;
-    templateVersion?: string;
     customCss?: string;
     meganav?: boolean;
     googleSearch?: boolean;
@@ -112,7 +109,6 @@ const generateDescription = () => {
 const sitename = generateSiteName();
 const title = generateTitle();
 const description = generateDescription();
-const templateVersion = env.templateVersion || "1";
 
 // robots の判定
 const shouldNoIndex = page.params.type === "search_result" || 
@@ -148,8 +144,8 @@ const activeChatTargets = processChatSettings();
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta http-equiv="X-UA-Compatible" content="IE=11" />
 <meta name="date" content={buildnum} scheme="YYYYMMDD" />
-<meta name="cy-template-version" content={templateVersion} />
-<meta name="cy-product-name" content={env.product} />
+<meta name="cy-template-version" content="2" />
+<meta name="cy-product-name" content="kintone" />
 <meta name="cy-region" content={env.targetRegion} />
 
 <title>{title}</title>
@@ -205,19 +201,11 @@ const activeChatTargets = processChatSettings();
 <link rel="stylesheet" href="/k/stylesheets/zoom.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
-{templateVersion === "2" ? (
-  <>
-    <link rel="stylesheet" href={`/k/stylesheets/application2.css?${buildnum}`} />
-    <link rel="stylesheet" href={`/k/stylesheets/searchbox.css?${buildnum}`} />
-    <link rel="stylesheet" href={`/k/stylesheets/footer.css?${buildnum}`} />
-    {page.isHome && (
-      <link rel="stylesheet" href={`/k/stylesheets/toppage2.css?${buildnum}`} />
-    )}
-  </>
-) : (
-  page.isHome && (
-    <link rel="stylesheet" href={`stylesheets/home.css?${buildnum}`} />
-  )
+<link rel="stylesheet" href={`/k/stylesheets/application2.css?${buildnum}`} />
+<link rel="stylesheet" href={`/k/stylesheets/searchbox.css?${buildnum}`} />
+<link rel="stylesheet" href={`/k/stylesheets/footer.css?${buildnum}`} />
+{page.isHome && (
+  <link rel="stylesheet" href={`/k/stylesheets/toppage2.css?${buildnum}`} />
 )}
 
 {page.params.type === "search_result" && (
@@ -251,13 +239,9 @@ const activeChatTargets = processChatSettings();
   <script is:inline src={`/k/javascripts/custom_gr6.js?${buildnum}`}></script>
 )}
 
-{templateVersion === "2" && (
-  <>
-    <script is:inline src={`/k/javascripts/searchbox.js?${buildnum}`}></script>
-    {page.isHome && (
-      <script is:inline src={`/k/javascripts/toppage2.js?${buildnum}`}></script>
-    )}
-  </>
+<script is:inline src={`/k/javascripts/searchbox.js?${buildnum}`}></script>
+{page.isHome && (
+  <script is:inline src={`/k/javascripts/toppage2.js?${buildnum}`}></script>
 )}
 
 {needsVue && (
