--- a/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
+++ b/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
@@ -1,16 +1,9 @@
 ---
 import Wovn from '@/components/Wovn.astro';
 import Footer2Disclaimer from './Footer2Disclaimer.astro';
+import type { BaseProps } from './types';
 
-interface Props {
-  env: {
-    footerLinks?: string;
-    languageCode: string;
-  };
-  page: {
-    isHome?: boolean;
-  };
-}
+interface Props extends BaseProps {}
 
 const { env, page } = Astro.props;
 
