--- a/kintone-help-astro-poc/src/layouts/components/HeaderLabel.astro
+++ b/kintone-help-astro-poc/src/layouts/components/HeaderLabel.astro
@@ -1,16 +1,7 @@
 ---
-interface Props {
-  env: {
-    labelColors?: string[];
-    labelLead?: string;
-    labelContents?: string[];
-  };
-  page: {
-    params: {
-      labels?: string[];
-    };
-  };
-}
+import type { BaseProps } from './types';
+
+interface Props extends BaseProps {}
 
 const { env, page } = Astro.props;
 
