--- a/kintone-help-astro-poc/src/layouts/components/SearchBox.astro
+++ b/kintone-help-astro-poc/src/layouts/components/SearchBox.astro
@@ -1,21 +1,8 @@
 ---
 import Wovn from '@/components/Wovn.astro';
+import type { BaseProps } from './types';
 
-interface Props {
-  env: {
-    googleSearch?: boolean;
-    bingSearch?: boolean;
-    googleSearchTabs?: string;
-    bingSearchTabs?: string;
-  };
-  page: {
-    isHome: boolean;
-    lang: string;
-    params: {
-      type?: string;
-    };
-  };
-}
+interface Props extends BaseProps {}
 
 const { env, page } = Astro.props;
 
