--- a/kintone-help-astro-poc/src/layouts/components/Footer.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Footer.astro
@@ -148,7 +148,7 @@ const processedLegalMenu = legalMenu.map(item => {
             <!-- CookiePro Cookies Settings button start -->
             <button id="ot-sdk-btn" class="ot-sdk-show-settings">Cookie Settings</button>
             <!-- CookiePro Cookies Settings button end -->
-            <script is:inline type="text/javascript" src="javascripts/geolocation.js"></script>
+            <script is:inline type="text/javascript" src="/k/javascripts/geolocation.js"></script>
           </>
         )}
       </div>
