--- a/kintone-help-astro-poc/src/layouts/PageLayout.astro
+++ b/kintone-help-astro-poc/src/layouts/PageLayout.astro
@@ -93,7 +93,7 @@ const isDisabled = disabled.includes(env.targetRegion);
           {env.targetRegion === "US" && <div>[LOCALE MODAL PARTIAL]</div>}
           
           <!-- Announcement banner -->
-          <div>[ANNOUNCEMENT BANNER PARTIAL]</div>
+          {/* <div>[ANNOUNCEMENT BANNER PARTIAL]</div> */}
           
           <!-- Header -->
           <Header page={pageData} />
